--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                     </div>
 
                     <div>
-                        <nav class="navbar navbar-expand-lg bg-light">
+                        <nav class="navbar navbar-expand-lg">
                             <div class="container-fluid">
-                                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                                <button class="navbar-toggler bg-light" type="button" data-bs-toggle="offcanvas"
                                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
-                                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
+                                <div class="offcanvas offcanvas-start w-100" tabindex="-1" id="offcanvasNavbar"
                                     aria-labelledby="offcanvasNavbarLabel">
-                                    <div class="offcanvas-header d-flex justify-content-end">
+                                    <div class="offcanvas-header justify-content-end">
                                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                             aria-label="Close"></button>
                                     </div>
