--- a/index.html
+++ b/index.html
@@ -106,20 +106,18 @@
 
     <section>
         <div class="container ">
-            <div class="d-flex flex-column ">
-                <div class="d-flex-inline text-center">
+            <div class="row row-cols-sm-2 row-cols-auto justify-content-center">
+                <div class="col text-center">
                     <h2 class="my-4">Services we provide</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis dolor reprehenderit
                         error veritatis necessitatibus numquam id minima. Maxime quasi, quibusdam provident fuga debitis
-                        non alias ut veniam! Illum, beatae! Impedit iusto beatae, numquam voluptatum vero assumenda nam
-                        natus minima temporibus neque odit, dolores nulla nesciunt, quia excepturi odio quidem
-                        asperiores est repudiandae architecto reiciendis? Accusamus obcaecati cupiditate incidunt nulla
+                        non alias ut veniam! Illum, beatae!
                     </p>
                 </div>
             </div>
 
-            <div class="container-fluid">
-                <div class="row row-cols-4 justify-content-center text-center">
+            <div class="container-fluid ">
+                <div class="row row-cols-1 row-cols-sm-3 justify-content-center text-center ">
                     <div class="col">
                         <i class="fa-solid fa-users"></i>
                         <h3>Consultancy</h3>
@@ -140,16 +138,73 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis animi illo incidunt
                             architecto, sequi iste non quia sed odio ea minus.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container text-center">
+            <div class="row row-cols-auto row-cols-sm-3 row-cols-md-2 justify-content-center">
+                <div class="col">
+                    <h2>Our blog</h2>
+                    <hr>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo quam eos veritatis atque non
+                        repudiandae aperiam</p>
+                </div>
+            </div>
+
+            <div class="row row-cols-auto row-cols-md-3 justify-content-center align-items-center gap-5">
+                <div class="col ">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="./imgs/camera.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./imgs/camera.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./imgs/camera.jpg" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <p>10 April 2014</p>
+                    <h3>Typi non habent claritatem insitam</h3>
+                    <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
+                        illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim
+                        qui[...]</p>
 
                 </div>
 
             </div>
 
-        </div>
-    </section>
 
-    <section>
-        Our blog... + carousel
+
+
+
+        </div>
     </section>
 
     <section>
