add blog section

--- a/index.html
+++ b/index.html
@@ -153,52 +153,80 @@
                         repudiandae aperiam</p>
                 </div>
             </div>
+    </section>
 
-            <div class="row row-cols-auto row-cols-md-3 justify-content-center align-items-center gap-5">
-                <div class="col ">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                                class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                                aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                                aria-label="Slide 3"></button>
-                        </div>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="./imgs/camera.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./imgs/camera.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./imgs/camera.jpg" class="d-block w-100" alt="...">
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
+    <section>
+        <div class="row row-cols-auto row-cols-md-3 justify-content-center gap-5">
+            <div class="col ">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
                     </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./imgs/camera.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./imgs/camera.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./imgs/camera.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-
-                <div class="col">
-                    <p>10 April 2014</p>
-                    <h3>Typi non habent claritatem insitam</h3>
-                    <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
-                        illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim
-                        qui[...]</p>
-
-                </div>
-
             </div>
+
+            <div class="col">
+                <p>10 April 2014</p>
+                <h3>Typi non habent claritatem insitam</h3>
+                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
+                    illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim
+                    qui[...]</p>
+            </div>
+        </div>
+
+        <div class="row row-cols-auto row-cols-md-3 justify-content-center gap-5 flex-row-reverse">
+            <div class="col">
+                <img src="./imgs/camera.jpg" alt="camera" class="w-100">
+            </div>
+
+            <div class="col">
+                <p>20 March 2014</p>
+                <h3>Typi non habent claritatem insitam</h3>
+                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
+                    illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim
+                    qui[...]</p>
+            </div>
+        </div>
+
+        <div class="row row-cols-auto row-cols-md-3 justify-content-center gap-5">
+            <div class="col">
+                <img src="./imgs/camera.jpg" alt="camera" class="w-100">
+            </div>
+
+            <div class="col">
+                <p>10 January 2014</p>
+                <h3>Typi non habent claritatem insitam</h3>
+                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
+                    illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim
+                    qui[...]</p>
+            </div>
+        </div>
 
 
 
