--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
     </section>
 
-    <section>
+    <section class="container">
         <div class="row row-cols-auto row-cols-md-3 justify-content-center gap-5">
             <div class="col ">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
@@ -227,16 +227,42 @@
                     qui[...]</p>
             </div>
         </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row text-center">
+                <h2>Contact</h2>
+            </div>
+
+            <div class="d-flex flex-wrap flex-md-row flex-column">
+                <div class="w-md-100 flex-grow-1 pe-3">
+                    <div class="input-form ">
+                        <input type="text" placeholder="Name*" class="input form-field custom-style w-100" name="name">
+                    </div>
+                </div>
+                <div class="w-md-100 flex-grow-1 ps-3">
+                    <div class="input-form">
+                        <input type="email" placeholder="Email*" class="input form-field custom-style w-100"
+                            name="email">
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="">
+                <div class="input-form">
+                    <input type="text" placeholder="Message..." class="input form-field custom-style message w-100"
+                        name="message">
+                </div>
+            </div>
+
 
 
 
 
 
         </div>
-    </section>
-
-    <section>
-        Contact...
     </section>
 
     <footer>
