--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
             </div>
 
             <div class="d-flex flex-wrap flex-md-row flex-column">
-                <div class="w-md-100 flex-grow-1 pe-3">
+                <div class="w-md-100 flex-grow-1 pe-md-3">
                     <div class="input-form ">
                         <input type="text" placeholder="Name*" class="input form-field custom-style w-100" name="name">
                     </div>
                 </div>
-                <div class="w-md-100 flex-grow-1 ps-3">
+                <div class="w-md-100 flex-grow-1 ps-md-3">
                     <div class="input-form">
                         <input type="email" placeholder="Email*" class="input form-field custom-style w-100"
                             name="email">
