--- a/index.html
+++ b/index.html
@@ -229,44 +229,46 @@
         </div>
     </section>
 
-    <section>
-        <div class="container">
+    <section class="contact">
+        <div class="container py-md-5 px-xl-20">
             <div class="row text-center">
                 <h2>Contact</h2>
             </div>
 
             <div class="d-flex flex-wrap flex-md-row flex-column">
                 <div class="w-md-100 flex-grow-1 pe-md-3">
-                    <div class="input-form ">
+                    <div>
                         <input type="text" placeholder="Name*" class="input form-field custom-style w-100" name="name">
                     </div>
                 </div>
                 <div class="w-md-100 flex-grow-1 ps-md-3">
-                    <div class="input-form">
+                    <div>
                         <input type="email" placeholder="Email*" class="input form-field custom-style w-100"
                             name="email">
                     </div>
                 </div>
             </div>
-
-
-            <div class="">
-                <div class="input-form">
-                    <input type="text" placeholder="Message..." class="input form-field custom-style message w-100"
-                        name="message">
-                </div>
+            <div>
+                <input type="text" placeholder="Message..." class="input form-field custom-style message w-100"
+                    name="message">
             </div>
-
-
-
-
-
-
+            <div class="d-flex justify-content-center">
+                <input type="submit" class="button" value="Submit">
+            </div>
         </div>
     </section>
 
     <footer>
-        Bootstrap row-cols with info + copyright
+        <section>
+
+        </section>
+
+        <section>
+            <div class="d-flex justify-content-center align-items-center copyright">
+                <p class="my-4">©2014 Imran Khan All Rights Reserved</p>
+
+            </div>
+        </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
