--- a/index.html
+++ b/index.html
@@ -260,7 +260,75 @@
 
     <footer>
         <section>
+            <div class="container">
+                <div class="row row-cols-4 align-items-center">
+                    <div class="col">
+                        <h2>Mairala</h2>
+                        <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
+                            illum dolore.</p>
+                        <p>eugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
+                            luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum
+                            soluta</p>
+                    </div>
 
+                    <div class="col">
+                        <div>
+                            <h3>Recent posts</h3>
+                            <p>March 30, 2014
+                            </p>
+                            <p><strong>Duis autem vel eum iriure dolor
+                                </strong></p>
+                            <hr>
+                        </div>
+                        <div>
+                            <p>March 30, 2014
+                            </p>
+                            <p><strong>Duis autem vel eum iriure dolor
+                                </strong></p>
+                            <hr>
+                        </div>
+                        <div>
+                            <p>March 30, 2014
+                            </p>
+                            <p><strong>Duis autem vel eum iriure dolor
+                                </strong></p>
+                            <hr>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div>
+                            <h3>Twitter feeds</h3>
+                            <p>about 2 days ago @kristianplatt</p>
+                            <p><strong>Good work buddy</strong></p>
+                            <hr>
+                        </div>
+                        <div>
+                            <p>about 2 days ago @fasteven</p>
+                            <p><strong>Good work buddy</strong></p>
+                            <hr>
+                        </div>
+                        <div>
+                            <p>about 2 days ago @streamer</p>
+                            <p><strong>Good work buddy</strong></p>
+                            <hr>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <h3>Our address</h3>
+                        <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est
+                            etiam processus dynamicus,luptatum zzril delenit augue duis dolore te feugait nulla
+                            facilisi. Nam liber tempor cum soluta</p>
+
+                        <p><i class="fa-solid fa-location-dot"></i>Moonshine St. 14/05 Light, Jupiter</p>
+                        <p><i class="fa-solid fa-phone"></i>+00 (123) 456 78 90</p>
+                        <p><i class="fa-solid fa-envelope"></i>first.last@email.com</p>
+                    </div>
+
+                </div>
+
+            </div>
         </section>
 
         <section>
