--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
     </section>
 
     <footer>
-        <section>
-            <div class="container">
-                <div class="row row-cols-4 align-items-center">
+        <section class="footer-info">
+            <div class="container-fluid px-lg-5 py-lg-5">
+                <div class="row row-cols-auto row-cols-md-5 align-items-start justify-content-center gap-1">
                     <div class="col">
                         <h2>Mairala</h2>
                         <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
