--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </main>
 
     <section>
-        <div class="container ">
+        <div class="container">
             <div class="row row-cols-sm-2 row-cols-auto justify-content-center my-5">
                 <div class="col text-center">
                     <h2 class="my-4 text-uppercase highlight">Services we provide</h2>
@@ -115,21 +115,21 @@
                     </p>
                 </div>
             </div>
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-5 services">
                 <div class="row row-cols-1 row-cols-sm-3 justify-content-center text-center ">
-                    <div class="col">
+                    <div class="col my-5">
                         <i class="fa-solid fa-users highlight"></i>
                         <h3 class="text-uppercase">Consultancy</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis animi illo incidunt
                             architecto, sequi iste non quia sed odio ea minus.</p>
                     </div>
-                    <div class="col">
+                    <div class="col my-5">
                         <i class="fa-solid fa-bullhorn highlight"></i>
                         <h3 class="text-uppercase">Marketing</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis animi illo incidunt
                             architecto, sequi iste non quia sed odio ea minus.</p>
                     </div>
-                    <div class="col">
+                    <div class="col my-5">
                         <i class="fa-solid fa-flask highlight"></i>
                         <h3 class="text-uppercase">Research</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis animi illo incidunt
@@ -145,7 +145,10 @@
             <div class="row row-cols-auto row-cols-md-3 justify-content-center">
                 <div class="col">
                     <h2 class="text-uppercase highlight">Our blog</h2>
-                    <hr class="highlight my-md-4">
+                    <div class="d-flex justify-content-center">
+                        <hr class="my-md-4 bar">
+                    </div>
+
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo quam eos veritatis atque non
                         repudiandae aperiam</p>
                 </div>
