--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO tags and keywords -->
     <meta name="description"
         content="Discover our corporate agency's mission, vision, and core values. Learn about our experienced leadership team and commitment to delivering exceptional business consulting services to our clients.">
     <meta name="keywords" content="corporate agency, business, consulting, planning, analysis">
     <title>Mairala - Home</title>
+    <!-- Import fonts from Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Open+Sans&family=Raleway:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+    <!-- Import stylesheet -->
     <link rel="stylesheet" href="./css/styles.css">
+    <!-- Import Bootstrap library -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- Import fontawesome -->
     <script src="https://kit.fontawesome.com/72ec4e2851.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- Responsive Navbar -->
     <header class="d-flex sticky-top">
         <div class="top container-fluid">
             <div class="container">
@@ -72,8 +78,8 @@
         </div>
     </header>
 
+    <!-- Main section -->
     <main class="container-fluid px-0">
-
         <div class="carousel-section">
             <div class="transparent-bg"></div>
             <div class="carousel-container">
@@ -104,6 +110,7 @@
         </div>
     </main>
 
+    <!-- Services section -->
     <section>
         <div class="container">
             <div class="row row-cols-sm-2 row-cols-auto justify-content-center my-5">
@@ -140,6 +147,7 @@
         </div>
     </section>
 
+    <!-- Our Blog section -->
     <section>
         <div class="container text-center pt-md-5">
             <div class="row row-cols-auto row-cols-md-3 justify-content-center">
@@ -254,6 +262,7 @@
         </div>
     </section>
 
+    <!-- Footer section -->
     <footer>
         <section class="footer-info">
             <div class="container py-5">
@@ -332,10 +341,11 @@
             </div>
         </section>
     </footer>
-
+    <!-- Import Bootstrap javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
 </body>
 
 </html>
+<!-- Ricardo Ruiz 2023 -->
